reports/scratch.log
Traceback (most recent call last):
  File "/anaconda3/lib/python3.7/site-packages/jupyter_cache/executors/utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "/anaconda3/lib/python3.7/site-packages/nbclient/client.py", line 1117, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/anaconda3/lib/python3.7/site-packages/nbclient/util.py", line 78, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/anaconda3/lib/python3.7/site-packages/nbclient/util.py", line 57, in just_run
    return loop.run_until_complete(coro)
  File "/anaconda3/lib/python3.7/asyncio/base_events.py", line 584, in run_until_complete
    return future.result()
  File "/anaconda3/lib/python3.7/site-packages/nbclient/client.py", line 559, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "/anaconda3/lib/python3.7/site-packages/nbclient/client.py", line 862, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/anaconda3/lib/python3.7/site-packages/nbclient/client.py", line 765, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
A lock is a synchronization primitive used to control access to a shared resource

A mutex is a lock

A semaphore is a variable used to control access to a shared resource.
For example, there can be some number of tokens available for accessing
a shared resource and the count keeps track of the tokens and that count is
incremented when a thread releases access and decremented when a thread gains access.
Or it can just be a variable that is toggled.

Bounded semaphore when the number of tokens cannot exceeed some fixed number.

A monitor has 2 definitions. A class, method or function that is thread safe. Or a pattern
built with a lock and a condition where you wait in a while loop for some statement to become true

A critical section is a part of the code that accesses a shared resource

A race condition is when the substantive behavior of a system depends on the timing
or sequence of otherwise uncontrollable events
For example you might have two threads incrementing a global count

Deadlock is when 2 or more members of a group are waiting for each to complete some action.
For example a thread grabs lock 1 and then tries to grab lock 2. Another thread
grabs lock 2 and then tries to grab lock 1. Now both threads are waiting for each other.

Livelock is like deadlock except that the members of the group keep taking some action
but never progress. If all the dining philosophers sit down at the same time, and their
policy is to grab the right fork and then wait for 5 minutes for the left fork to become
available and if it's not available then to grab the left fork and wait for 5 minutes
for the right fork to become available.

Starvation is when a thread cannot access the resources it needs because of competition
from other threads.

1/((1-p) + p/s)


------------------

[0;36m  File [0;32m"<ipython-input-1-e5d7c58261a9>"[0;36m, line [0;32m1[0m
[0;31m    A lock is a synchronization primitive used to control access to a shared resource[0m
[0m         ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-e5d7c58261a9>, line 1)

